--- a/src/views/index.boilogo.html
+++ b/src/views/index.boilogo.html
@@ -4,12 +4,19 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
         <title>boilogo</title>
+        <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
+        <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" />
         <link rel="stylesheet" href="main.boilogo.css">
     </head>
     <body>
         <div class="container">
             <canvas id="canvas"></canvas>
+            <div class="logo_content">
+                <p class="title hide">boi</p>
+                <p class="subtitle hide">build for elegance</p>
+            </div>
         </div>
+        <script src='/libs/zepto.min.js'></script>
         <script src="main.boilogo.js" charset="utf-8"></script>
     </body>
 </html>
